--- a/Taxi24RestAPI/appsettings.json
+++ b/Taxi24RestAPI/appsettings.json
@@ -13,5 +13,7 @@
   },
   "AllowedHosts": "*",
   "UseSQLite": true,
-  "SQLiteFile": "MyDatabase.db"
+  "SQLiteFile": "MyDatabase.db",
+  "KMDefaultRadius":  3
+    
 }
