--- a/Taxi24RestAPI/appsettings.json
+++ b/Taxi24RestAPI/appsettings.json
@@ -14,6 +14,9 @@
   "AllowedHosts": "*",
   "UseSQLite": true,
   "SQLiteFile": "MyDatabase.db",
-  "KMDefaultRadius":  3
-    
+  "KMDefaultRadius": 3,
+  "CostoBase": 17.5,
+  "CostoKilometro": 23.4,
+  "CostoMinuto": 4.8
+
 }
