Completo pasajero controller

--- a/Taxi24RestAPI/appsettings.json
+++ b/Taxi24RestAPI/appsettings.json
@@ -15,6 +15,7 @@
   "UseSQLite": true,
   "SQLiteFile": "MyDatabase.db",
   "KMDefaultRadius": 3,
+  "ConductoresDisponiblesDefault": 3,
   "CostoBase": 17.5,
   "CostoKilometro": 23.4,
   "CostoMinuto": 4.8
