--- a/Taxi24RestAPI/appsettings.json
+++ b/Taxi24RestAPI/appsettings.json
@@ -13,7 +13,7 @@
   },
   "AllowedHosts": "*",
   "UseSQLite": true,
-  "SQLiteFile": "MyDatabase.db",
+  "SQLiteFile": "TaxiDB.db",
   "KMDefaultRadius": 3,
   "ConductoresDisponiblesDefault": 3,
   "CostoBase": 17.5,
