UserConfigCambio en la configuracion de carga de modulos

--- a/Taxi24RestAPI/appsettings.json
+++ b/Taxi24RestAPI/appsettings.json
@@ -2,7 +2,9 @@
   "ConnectionStrings": {
     //"TaxiDBConnection": "Data Source=DESKTOP-GNJ8DLL/\\EM; Initial Catalog=DB_Taxi24; Persist Security Info=True; Connection Timeout=6000; User Id ={0}; Password ={1};"
     //"TaxiDBConnection": "Server=localhost\\SQLEXPRESS01;Database=DB_Taxi24;Trusted_Connection=True;",
-    "TaxiDBConnection": "Server=DESKTOP-BPE37R3\\SQLEXPRESS01;Database=DB_Taxi24;Trusted_Connection=True;"
+    //"TaxiDBConnection": "Server=DESKTOP-BPE37R3\\SQLEXPRESS01;Database=DB_Taxi24;Trusted_Connection=True;"
+    "TaxiDBConnection": "Server=DESKTOP-BPE37R3\\SQLEXPRESS01;Database=DB_Taxi24;Trusted_Connection=True; User Id =sa; Password =12345678;"
+
   },
   "Logging": {
     "LogLevel": {
@@ -12,7 +14,7 @@
     }
   },
   "AllowedHosts": "*",
-  "UseSQLite": true,
+  "UseSQLite": false,
   "SQLiteFile": "TaxiDB.db",
   "KMDefaultRadius": 3,
   "ConductoresDisponiblesDefault": 3,
